--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
