--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -41,6 +42,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "file-saver": "^2.0.5",
+    "jose": "^5.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "jszip": "^3.10.1",
