--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "sonner": "^1.5.0",
     "patch-package": "^8.0.0",
