--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,19 @@
-
 {
-  "name": "Ha-Mim Iron Mart",
-  "short_name": "IronMart",
-  "description": "Ledger for Ha-Mim Iron Mart",
+  "name": "Ha-Mim Iron Mart Ledger",
+  "short_name": "ShipShape",
+  "description": "Financial and inventory management for Ha-Mim Iron Mart.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#223140",
+  "theme_color": "#22314d",
   "icons": [
     {
-      "src": "https://placehold.co/192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
