--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
+    "check-types": "tsc --noEmit",
     "postinstall": "patch-package"
   },
   "dependencies": {
